docs/3.15.0/self-hosting/architecture/tracking-server.md
# MLflow Tracking Server

MLflow tracking server is a stand-alone HTTP server that serves multiple REST API endpoints for tracking runs/experiments. While MLflow Tracking can be used in local environment, hosting a tracking server is powerful in the team development workflow:

* **Collaboration**: Multiple users can log runs to the same endpoint, and query runs and models logged by other users.
* **Sharing Results**: The tracking server also serves [Tracking UI](/docs/3.15.0/ml/tracking.md#tracking_ui) endpoint, where team members can easily explore each other's results.
* **Centralized Access**: The tracking server can be run as a proxy for the remote access for metadata and artifacts, making it easier to secure and audit access to data.

## Start the Tracking Server[​](#start-the-tracking-server "Direct link to Start the Tracking Server")

Starting the tracking server is as simple as running:

bash

```
mlflow server
```

This serves both the Tracking UI and the REST API at `http://127.0.0.1:5000`, storing metadata in a local SQLite database (`sqlite:///mlflow.db` by default). For backward compatibility, if a `./mlruns` file store with existing experiment data is present, that store is reused instead. You should see output like:

text

```
Backend store URI not provided. Using sqlite:///mlflow.db

Registry store URI not provided. Using backend store URI.

[MLflow] Security middleware enabled with default settings (localhost-only). To allow connections from other hosts, use --host 0.0.0.0 and configure --allowed-hosts and --cors-allowed-origins.

INFO:     Application startup complete.

INFO:     Uvicorn running on http://127.0.0.1:5000 (Press CTRL+C to quit)
```

Then point your client code at the server so your runs and traces land there:

bash

```
export MLFLOW_TRACKING_URI=http://127.0.0.1:5000
```

That covers local use. When you're ready to use a different backend, store artifacts remotely, or expose the server to your team, see [Configure Server](#configure-server) below.

## Logging to a Tracking Server[​](#logging_to_a_tracking_server "Direct link to Logging to a Tracking Server")

Once the tracking server is started, connect your local clients by setting the `MLFLOW_TRACKING_URI` environment variable to the server's URI, along with its scheme and port (for example, `http://10.0.0.1:5000`) or call [`mlflow.set_tracking_uri()`](/docs/3.15.0/api_reference/python_api/mlflow.html#mlflow.set_tracking_uri).

MLflow APIs like [`mlflow.start_run()`](/docs/3.15.0/api_reference/python_api/mlflow.html#mlflow.start_run), [`mlflow.log_param()`](/docs/3.15.0/api_reference/python_api/mlflow.html#mlflow.log_param), [`mlflow.start_trace()`](/docs/3.15.0/api_reference/python_api/mlflow.html#mlflow.start_trace) make API requests to your remote tracking server and log the data.

* Python
* TypeScript
* R
* Scala

python

```
import mlflow



remote_server_uri = "..."  # set to your server URI, e.g. http://127.0.0.1:8080

mlflow.set_tracking_uri(remote_server_uri)

mlflow.set_experiment("/my-experiment")



# Logging a run

with mlflow.start_run():

    mlflow.log_param("a", 1)

    mlflow.log_metric("b", 2)



# Logging a trace

with mlflow.start_span(name="test_trace") as span:

    span.set_inputs({"x": 1, "y": 2})

    span.set_outputs(3)
```

typescript

```
import * as mlflow from "@mlflow/core";



mlflow.init({

    trackingUri: "<your-tracking-server-uri>",

    experimentId: "<your-experiment-id>",

});



const myFunc = mlflow.trace(

    (a: number, b: number) => {

        return a + b;

    },

    { name: 'my-func' }

)

myFunc(1, 2);
```

r

```
library(mlflow)

install_mlflow()

remote_server_uri = "..." # set to your server URI

mlflow_set_tracking_uri(remote_server_uri)

mlflow_set_experiment("/my-experiment")

mlflow_log_param("a", "1")
```

scala

```
import org.mlflow.tracking.MlflowClient



val remoteServerUri = "..." // set to your server URI

val client = new MlflowClient(remoteServerUri)



val experimentId = client.createExperiment("my-experiment")

client.setExperiment(experimentId)



val run = client.createRun(experimentId)

client.logParam(run.getRunId(), "a", "1")
```

## Configure Server[​](#configure-server "Direct link to Configure Server")

This section describes how to configure the tracking server for some common use cases. The section requires you to have a basic knowledge about the tracking server architecture, please visit [Architecture Overview](/docs/3.15.0/self-hosting/architecture/overview.md) if you are not familiar with it yet.

Start from what you want to do, then jump to the relevant section:

| What do you want to do?                  | Flag(s)                                                 | Section                                                                                    |
| ---------------------------------------- | ------------------------------------------------------- | ------------------------------------------------------------------------------------------ |
| Use PostgreSQL/MySQL instead of SQLite   | `--backend-store-uri`                                   | [Backend Store](#backend-store)                                                            |
| Store artifacts in the cloud             | `--artifacts-destination` / `--default-artifact-root`   | [Remote artifacts store](#tracking-server-artifact-store)                                  |
| Open the server to your team (securely)  | `--host` + `--allowed-hosts` / `--cors-allowed-origins` | [Secure Tracking Server](#tracking-auth)                                                   |
| Archive old trace payloads               | `--trace-archival-config`                               | [Trace Archival](#trace-archival)                                                          |
| Isolate experiments, models, and prompts | `--enable-workspaces`                                   | [Getting Started with Workspaces](/docs/3.15.0/self-hosting/workspaces/getting-started.md) |

For the exhaustive list of flags, run `mlflow server --help` or see the [CLI reference](https://mlflow.org/docs/latest/api_reference/cli.html#mlflow-server).

### Backend Store[​](#backend-store "Direct link to Backend Store")

By default, the tracking server uses SQLite database (`sqlite:///mlflow.db`) to store runs metadata. You can configure a different backend store by adding the `--backend-store-uri` option:

Example

bash

```
# Default: SQLite database (mlflow.db in current directory)

mlflow server



# PostgreSQL: connect to an existing PostgreSQL database

mlflow server --backend-store-uri postgresql://username:password@host:port/database



# File-based: use local filesystem under ./mlruns directory

mlflow server --backend-store-uri ./mlruns
```

SQLite is the default backend and provides good performance and reliability for most use cases. For production deployments with high concurrency, consider using PostgreSQL or MySQL.

### Trace Archival[​](#trace-archival "Direct link to Trace Archival")

MLflow can archive older trace span payloads from the tracking database to a configured artifact location while keeping the traces readable in the UI and APIs.

note

**Requirements**

Trace archival requires a tracking store that supports server-owned archival. The archival `location` must be a real artifact repository URI. The scheduler only archives finalized traces; in-progress traces are skipped.

Create a YAML config file and point `MLFLOW_TRACE_ARCHIVAL_CONFIG` at it:

trace-archival.yaml

yaml

```
trace_archival:

  enabled: true

  location: s3://mlflow-trace-archive

  retention: 30d

  interval_seconds: 300

  # Optional: omit this key to make each scheduler pass unbounded.

  max_traces_per_pass: 1000

  long_retention_allowlist:

    # Experiment ID for customer-support-agent-prod

    - 12345
```

Then start the server with that configuration, either through the environment or with the `--trace-archival-config` flag:

bash

```
export MLFLOW_TRACE_ARCHIVAL_CONFIG=/etc/mlflow/trace-archival.yaml



mlflow server \

  --backend-store-uri postgresql://user:pass@localhost/mlflow \

  --default-artifact-root s3://mlflow-artifacts



# Or pass the config path directly

mlflow server \

  --backend-store-uri postgresql://user:pass@localhost/mlflow \

  --default-artifact-root s3://mlflow-artifacts \

  --trace-archival-config /etc/mlflow/trace-archival.yaml
```

* `interval_seconds` controls how often the scheduler checks for archival work.
* `max_traces_per_pass` limits the amount of work in a single pass. If you omit it, the pass is unbounded and MLflow archives every eligible trace it can process in that run.
* `long_retention_allowlist` contains experiment IDs that are allowed to keep traces longer than the broader server or workspace policy.

When workspaces are enabled, trace archival settings are resolved in the following order:

1. Global defaults provide the base archive location and retention period.
2. Workspace-level `trace_archival_config` overrides those defaults for all traces in the workspace.
3. Experiment-level settings can further reduce retention for a specific experiment.
4. If an experiment requests a longer retention period than the broader server or workspace policy, that longer retention is only honored when the experiment's ID appears in `long_retention_allowlist`.

The archival budget remains server-owned even when workspaces are enabled. `max_traces_per_pass` applies to the entire scheduler pass, not to each workspace independently. On each pass MLflow shuffles the workspace order, then processes one workspace at a time. That means a workspace visited earlier in the shuffled order can consume some or all of the remaining pass budget before later workspaces are considered. Within a workspace, `archive-now` candidates are still prioritized before regular retention-based archival.

For example, if the global default is 30 days, a workspace is configured for 90 days, and experiment `123` is configured for 14 days, traces for experiment `123` are retained for 14 days. If experiment `123` is instead configured for 180 days, its traces are retained for 90 days unless `123` is added to `long_retention_allowlist`, in which case they are retained for 180 days.

Troubleshooting:

* If trace archival never runs, confirm that `MLFLOW_TRACE_ARCHIVAL_CONFIG` points to a valid YAML file and that `trace_archival.enabled` is `true`.
* Changes to `MLFLOW_TRACE_ARCHIVAL_CONFIG` are picked up without restarting MLflow. The server refreshes the config automatically with a short cache window (about 5 seconds) and applies updated settings on later scheduler checks. If a config refresh fails, MLflow continues using the last valid config until the file is fixed.
* If a workspace or experiment does not show an effective retention, check whether archival is disabled, misconfigured, or missing an archival location.
* If a longer experiment retention is ignored, add that experiment ID to `long_retention_allowlist` in the server config.

See [Archive Traces](/docs/3.15.0/genai/tracing/observe-with-traces/archive-traces.md) for the end-user workflow and archival failure / retry behavior, and [Getting Started with Workspaces](/docs/3.15.0/self-hosting/workspaces/getting-started.md) for workspace-level examples.

### Remote artifacts store[​](#tracking-server-artifact-store "Direct link to Remote artifacts store")

#### Using the Tracking Server for proxied artifact access (default)[​](#using-the-tracking-server-for-proxied-artifact-access-default "Direct link to Using the Tracking Server for proxied artifact access (default)")

By default, the tracking server stores artifacts in its local filesystem under `./mlartifacts` directory. To configure the tracking server to connect to remote storage and serve artifacts, start the server with `--artifacts-destination` flag.

bash

```
mlflow server \

    --host 0.0.0.0 \

    --port 8885 \

    --artifacts-destination s3://my-bucket
```

With this setting, MLflow server works as a proxy for accessing remote artifacts. The MLflow clients make HTTP request to the server for fetching artifacts.

important

If you are using remote storage, you have to configure the credentials for the server to access the artifacts. Be aware of that The MLflow artifact proxied access service enables users to have an *assumed role of access to all artifacts* that are accessible to the Tracking Server. Refer [Manage Access](/docs/3.15.0/self-hosting/architecture/artifact-store.md#artifacts-stores-manage-access) for further details.

Read-only Filesystems

When running in containers with read-only root filesystems (common in Kubernetes with `securityContext.readOnlyRootFilesystem: true`), configure remote artifact storage using `--artifacts-destination` (artifact serving is enabled by default). The tracking server does not create local directories at startup when using remote artifact storage, making it compatible with read-only environments.

bash

```
mlflow server \

    --host 0.0.0.0 \

    --backend-store-uri postgresql://user:pass@host/db \

    --artifacts-destination s3://my-bucket
```

The tracking server resolves the uri `mlflow-artifacts:/` in tracking request from the client to an otherwise explicit object store destination (e.g., "s3:/my\_bucket/mlartifacts") for interfacing with artifacts. The following patterns will all resolve to the configured proxied object store location (in above example, `s3://my-root-bucket/mlartifacts`):

* `https://<host>:<port>/mlartifacts`
* `http://<host>/mlartifacts`
* `mlflow-artifacts://<host>/mlartifacts`
* `mlflow-artifacts://<host>:<port>/mlartifacts`
* `mlflow-artifacts:/mlartifacts`

important

The MLflow client caches artifact location information on a per-run basis. It is therefore not recommended to alter a run's artifact location before it has terminated.

note

With proxied artifact access, artifact downloads from the MLflow UI also stream through the tracking server. Since MLflow 3.15.0, when run artifacts are instead stored directly on supported storage (currently Amazon S3, as with [non-proxied artifact access](#tracking-server-no-proxy)), the MLflow UI downloads artifacts directly from the storage via presigned URLs, bypassing the tracking server. See [Presigned URLs for direct artifact downloads](/docs/3.15.0/self-hosting/architecture/artifact-store.md#presigned-download-urls) for details.

#### Use tracking server w/o proxying artifacts access[​](#tracking-server-no-proxy "Direct link to Use tracking server w/o proxying artifacts access")

In some cases, you may want to directly access remote storage without proxying through the tracking server. In this case, you can start the server with `--no-serve-artifacts` flag, and setting `--default-artifact-root` to the remote storage URI you want to redirect the request to.

bash

```
mlflow server --no-serve-artifacts --default-artifact-root s3://my-bucket
```

With this setting, the MLflow client still makes minimum HTTP requests to the tracking server for fetching proper remote storage URI, but can directly upload artifacts to / download artifacts from the remote storage. While this might not be a good practice for access and security governance, it could be useful when you want to avoid the overhead of proxying artifacts through the tracking server.

Use the right configuration keys

The two options `--serve-artifacts` and `--default-artifact-root` look similar, but they are used for different purposes. When you pick the wrong one, the artifact logging requests will not go through the expected route and may cause access issues. The rule of thumb is:

1. **Want the server to proxy uploads?** Specify `--artifacts-destination` option and **do not set** `--default-artifact-root`. New experiments will get `mlflow-artifacts:/...` run URIs and clients upload and download artifacts via the server. Credentials are managed by the tracking server and clients do not need to set them.
2. **Want clients to write straight to storage?** Set `--default-artifact-root` option and `--no-serve-artifacts`. Runs will get `s3://...` / `gs://...` URIs and clients must have credentials to access the storage.

note

If the MLflow server is started with `--no-serve-artifacts` option, the client directly pushes artifacts to the artifact store. It does not proxy these through the tracking server by default.

For this reason, the client needs direct access to the artifact store. For instructions on setting up these credentials, see [Artifact Stores documentation](/docs/3.15.0/self-hosting/architecture/artifact-store.md#artifacts-stores-manage-access).

note

When an experiment is created, the artifact storage location from the configuration of the tracking server is logged in the experiment's metadata. When enabling proxied artifact storage, any existing experiments that were created while operating a tracking server in non-proxied mode will continue to use a non-proxied artifact location. In order to use proxied artifact logging, a new experiment must be created. If the intention of enabling a tracking server in `-serve-artifacts` mode is to eliminate the need for a client to have authentication to the underlying storage, new experiments should be created for use by clients so that the tracking server can handle authentication after this migration.

#### Optionally using a Tracking Server instance exclusively for artifact handling[​](#tracking-server-artifacts-only "Direct link to Optionally using a Tracking Server instance exclusively for artifact handling")

MLflow Tracking Server can be configured to use different backend store and artifact store, and provides a single endpoint for the clients.

However, if the volume of tracking server requests is sufficiently large and performance issues are noticed, a tracking server can be configured to serve in `--artifacts-only` mode, operating in tandem with an instance that operates with `--no-serve-artifacts` specified. This configuration ensures that the processing of artifacts is isolated from all other tracking server event handling.

When a tracking server is configured in `--artifacts-only` mode, any tasks apart from those concerned with artifact handling (i.e., model logging, loading models, logging artifacts, listing artifacts, etc.) will return an HTTPError. See the following example of a client REST call in Python attempting to list experiments from a server that is configured in `--artifacts-only` mode:

bash

```
# Launch the artifact-only server

mlflow server --artifacts-only ...
```

When workspaces are enabled, the artifact-only server must use the same logical workspace provider as the tracking server so it can validate `X-MLFLOW-WORKSPACE` before accessing storage. Configure the provider explicitly with `--workspace-store-uri`:

bash

```
mlflow server \

  --artifacts-only \

  --enable-workspaces \

  --workspace-store-uri postgresql://user:pass@host/mlflow \

  --artifacts-destination s3://mlflow-artifacts
```

In this mode, MLflow initializes the workspace provider for request validation but does not initialize the tracking or model registry stores. Tracking and workspace-management APIs remain disabled. If the workspace header is omitted, the provider's default workspace is used; unknown workspaces and requests without a resolvable default are rejected.

python

```
import requests



# Attempt to list experiments from the server

response = requests.get("http://0.0.0.0:8885/api/2.0/mlflow/experiments/list")
```

Output

\_

```
>> HTTPError: Endpoint: /api/2.0/mlflow/experiments/list disabled due to the mlflow server running in `--artifacts-only` mode.
```

Using an additional MLflow server to handle artifacts exclusively can be useful for large-scale MLOps infrastructure. Decoupling the longer running and more compute-intensive tasks of artifact handling from the faster and higher-volume metadata functionality of the other Tracking API requests can help minimize the burden of an otherwise single MLflow server handling both types of payloads.

note

If an MLflow server is running with the `--artifacts-only` flag, the client should interact with this server explicitly by including either a `host` or `host:port` definition for uri location references for artifacts. Otherwise, all artifact requests will route to the MLflow Tracking server, defeating the purpose of running a distinct artifact server.

## Secure Tracking Server[​](#tracking-auth "Direct link to Secure Tracking Server")

important

The server listens on `http://127.0.0.1:5000` by default and only accepts connections from the local machine. To let the server accept connections from other machines, you will need to pass `--host 0.0.0.0` to listen on all network interfaces (or a specific interface address). This is typically required configuration when running the server **in a Kubernetes pod or a Docker container**.

MLflow 3.5.0+ includes built-in security middleware to protect against DNS rebinding and CORS attacks. When using `--host 0.0.0.0`, configure the `--allowed-hosts` option to specify which domains can access your server. See [Security Configuration](/docs/3.15.0/self-hosting/security/network.md) for details.

### Built-in Security Middleware[​](#built-in-security-middleware "Direct link to Built-in Security Middleware")

MLflow 3.5.0+ includes security middleware that automatically protects against common web vulnerabilities:

* **DNS Rebinding Protection**: Validates Host headers to prevent attacks on internal services
* **CORS Protection**: Controls which web applications can access your API
* **Clickjacking Prevention**: X-Frame-Options header controls iframe embedding

Configure these features with simple command-line options:

bash

```
mlflow server --host 0.0.0.0 \

  --allowed-hosts "mlflow.company.com" \

  --cors-allowed-origins "https://app.company.com"
```

For detailed configuration options, see [Security Configuration](/docs/3.15.0/self-hosting/security/network.md).

### Authentication and Encryption[​](#authentication-and-encryption "Direct link to Authentication and Encryption")

For production deployments, we recommend using a reverse proxy (NGINX, Apache httpd) or VPN to add:

* **TLS/HTTPS encryption** for secure communication
* **Authentication** via proxy authentication headers

You can pass authentication headers to MLflow using these environment variables:

* `MLFLOW_TRACKING_USERNAME` and `MLFLOW_TRACKING_PASSWORD` - username and password to use with HTTP Basic authentication. To use Basic authentication, you must set `both` environment variables.
* `MLFLOW_TRACKING_TOKEN` - token to use with HTTP Bearer authentication. Basic authentication takes precedence if set.
* `MLFLOW_TRACKING_INSECURE_TLS` - If set to the literal `true`, MLflow does not verify the TLS connection, meaning it does not validate certificates or hostnames for `https://` tracking URIs. This flag is not recommended for production environments. If this is set to `true` then `MLFLOW_TRACKING_SERVER_CERT_PATH` must not be set.
* `MLFLOW_TRACKING_SERVER_CERT_PATH` - Path to a CA bundle to use. Sets the `verify` param of the `requests.request` function (see [requests main interface](https://requests.readthedocs.io/en/master/api)). When you use a self-signed server certificate you can use this to verify it on client side. If this is set `MLFLOW_TRACKING_INSECURE_TLS` must not be set (false).
* `MLFLOW_TRACKING_CLIENT_CERT_PATH` - Path to ssl client cert file (.pem). Sets the `cert` param of the `requests.request` function (see [requests main interface](https://requests.readthedocs.io/en/master/api)). This can be used to use a (self-signed) client certificate.

For notebook integration and UI embedding options, see [Network Security](/docs/3.15.0/self-hosting/security/network.md) configuration.

## Tracking Server versioning[​](#tracking-server-versioning "Direct link to Tracking Server versioning")

The version of MLflow running on the server can be found by querying the `/version` endpoint. This can be used to check that the client-side version of MLflow is up-to-date with a remote tracking server prior to running experiments. For example:

python

```
import requests

import mlflow



response = requests.get("http://<mlflow-host>:<mlflow-port>/version")

assert response.text == mlflow.__version__  # Checking for a strict version match
```

## Model Version Source Validation[​](#model-version-source-validation "Direct link to Model Version Source Validation")

The tracking server can be configured to validate model version sources using a regular expression pattern. This security feature helps ensure that only model versions from approved sources are registered in your model registry.

### Configuration[​](#configuration "Direct link to Configuration")

Set the `MLFLOW_CREATE_MODEL_VERSION_SOURCE_VALIDATION_REGEX` environment variable when starting the tracking server:

bash

```
export MLFLOW_CREATE_MODEL_VERSION_SOURCE_VALIDATION_REGEX="^mlflow-artifacts:/.*$"

mlflow server --host 0.0.0.0 --port 5000
```

When this environment variable is set, the tracking server will validate the `source` parameter in model version creation requests against the specified regular expression pattern. If the source doesn't match the pattern, the request will be rejected with an error.

### Example: Restricting to MLflow Artifacts[​](#example-restricting-to-mlflow-artifacts "Direct link to Example: Restricting to MLflow Artifacts")

To only allow model versions from MLflow artifacts storage:

bash

```
export MLFLOW_CREATE_MODEL_VERSION_SOURCE_VALIDATION_REGEX="^mlflow-artifacts:/.*$"

mlflow server --host 0.0.0.0 --port 5000
```

With this configuration:

python

```
import mlflow

from mlflow import MlflowClient



client = MlflowClient("http://localhost:5000")



# This will work - source matches the pattern

client.create_model_version(

    name="my-model",

    source="mlflow-artifacts://1/artifacts/model",

    run_id="abc123",

)



# This will fail - source doesn't match the pattern

client.create_model_version(

    name="my-model",

    source="s3://my-bucket/model",

    run_id="def456",

)  # Raises MlflowException: Invalid model version source
```

### Example: Restricting to Specific S3 Buckets[​](#example-restricting-to-specific-s3-buckets "Direct link to Example: Restricting to Specific S3 Buckets")

To only allow model versions from specific S3 buckets:

bash

```
export MLFLOW_CREATE_MODEL_VERSION_SOURCE_VALIDATION_REGEX="^s3://(production-models|staging-models)/.*$"

mlflow server --host 0.0.0.0 --port 5000
```

This pattern would allow sources like:

* `s3://production-models/model-v1/`
* `s3://staging-models/experiment-123/model/`

But reject sources like:

* `s3://untrusted-bucket/model/`
* `file:///local/path/model`

note

* If the environment variable is not set, no source validation is performed.
* The validation only applies to the `/mlflow/model-versions/create` API endpoint.
* The regular expression is applied using Python's `re.search()` function.
* Use standard regular expression syntax for pattern matching.

## Handling timeout when uploading/downloading large artifacts[​](#handling-timeout-when-uploadingdownloading-large-artifacts "Direct link to Handling timeout when uploading/downloading large artifacts")

When uploading or downloading large artifacts through the tracking server with the artifact proxy enabled, the server may take a long time to process the request. If it exceeds the timeout limit, the server will terminate the request, resulting in a request failure on the client side.

note

Since MLflow 3.15.0, when run artifacts are stored directly on supported storage (currently Amazon S3), the MLflow UI downloads them via presigned URLs instead of streaming them through the tracking server, avoiding these timeouts for UI downloads. See [Presigned URLs for direct artifact downloads](/docs/3.15.0/self-hosting/architecture/artifact-store.md#presigned-download-urls) for details.

Example client code:

python

```
import mlflow



mlflow.set_tracking_uri("<TRACKING_SERVER_URI>")

with mlflow.start_run():

    mlflow.log_artifact("large.txt")
```

Client traceback:

text

```
Traceback (most recent call last):

  File "/Users/user/python3.10/site-packages/requests/adapters.py", line 486, in send

    resp = conn.urlopen(

  File "/Users/user/python3.10/site-packages/urllib3/connectionpool.py", line 826, in urlopen

    return self.urlopen(

  ...

  File "/Users/user/python3.10/site-packages/urllib3/connectionpool.py", line 798, in urlopen

    retries = retries.increment(

  File "/Users/user/python3.10/site-packages/urllib3/util/retry.py", line 592, in increment

    raise MaxRetryError(_pool, url, error or ResponseError(cause))

urllib3.exceptions.MaxRetryError: HTTPSConnectionPool(host='mlflow.example.com', port=443): Max retries exceeded with url: ... (Caused by SSLError(SSLEOFError(8, 'EOF occurred in violation of protocol (_ssl.c:2426)')))

During handling of the above exception, another exception occurred:
```

Tracking server logs:

bash

```
INFO:     Started server process [82]

INFO:     Waiting for application startup.

INFO:     Application startup complete.

INFO:     Uvicorn running on http://0.0.0.0:5000 (Press CTRL+C to quit)

...

WARNING:  Request timeout exceeded

ERROR:    Exception in ASGI application
```

To mitigate this issue, the timeout length can be increased by using the `--uvicorn-opts` option when starting the server as shown below:

bash

```
mlflow server --uvicorn-opts "--timeout-keep-alive=120" ...
```

For users still using gunicorn (via `--gunicorn-opts`), the equivalent command would be:

bash

```
mlflow server --gunicorn-opts "--timeout=120" ...
```

See the [uvicorn settings documentation](https://www.uvicorn.org/settings/) for more configuration options.

## Full List of Command Line Options[​](#full-list-of-command-line-options "Direct link to Full List of Command Line Options")

Please run `mlflow server --help` for the full list of command line options.
